# network_chat

./: CMakeLists.txt  config.hpp
client/: main.cpp
client/include/: client.hpp
client/src/: client.cpp
server/: main.cpp
server/include/: functions.hpp  inroom.hpp  room.hpp  server.hpp  user.hpp
server/src/: functions.cpp  inroom.cpp  room.cpp  server.cpp
